--- a/public/index.html
+++ b/public/index.html
@@ -17,236 +17,18 @@
 </head>
 
 <body>
-  <!-- navbar -->
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">AIM.CRM</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li><a href="#">区域 <b class="caret"></b></a>
-        </li>
-        <li><a href="#">分公司 <b class="caret"></b></a>
-        </li>
-        <li><a href="#">行业 <b class="caret"></b></a>
-        </li>
-        <li><a href="#">项目类型 <b class="caret"></b></a>
-        </li>
-        <li><a href="#">筛选 <b class="caret"></b></a>
-        </li>
-      </ul>
-      <!-- user -->
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="" class="dropdown-toggle" data-toggle="dropdown">User <span class="badge">3</span> <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="">通知 <span class="badge pull-right">3</span></a>
-            </li>
-            <li class="divider"></li>
-            <li><a href="">退出</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-      <!-- user end -->
-    </div>
-  </nav>
-  <!-- navbar end -->
 
-  <!-- container -->
-  <div class="container">
-    <!-- count -->
-    <div class="well well-sm count">
-      <ul>
-        <li>aaa
-          <span class="badge">3</span>
-        </li>
-        <li>aaa
-          <span class="badge">3</span>
-        </li>
-        <li>aaa
-          <span class="badge">3</span>
-        </li>
-      </ul>
-      <div class="clearfix"></div>
-    </div>
-    <!-- count end -->
-
-    <!-- filter -->
-    <div class="well well-sm filter">
-      <form class="form-inline">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="最低金额">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="最高金额">
-        </div>
-        <div class="form-group">
-          <select name="" id="" class="form-control">
-            <option value="">选项</option>
-          </select>
-        </div>
-        <br>
-        <br>
-        <button class="btn btn-default" type="button">重置</button>
-        <button class="btn btn-primary" type="button">筛选</button>
-      </form>
-    </div>
-    <!-- filter end -->
-
-    <!-- project panel -->
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        项目
-        <span class="badge">100</span>
-        <button class="btn btn-primary btn-xs pull-right" type="button">
-          <span class="glyphicon glyphicon-plus"></span>
-        </button>
-        <div class="clearfix"></div>
-      </div>
-      <table class="table table-hover">
-        <tr>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-        </tr>
-        <tr>
-          <td>
-            <button class="btn btn-default btn-xs">
-              <span class="glyphicon glyphicon-chevron-up"></span>
-            </button>
-          </td>
-          <td>111</td>
-          <td>111</td>
-          <td>111</td>
-          <td>111</td>
-          <td>111</td>
-        </tr>
-        <tr>
-          <td colspan="6">
-            <div class="well well sm">
-              <table class="table table-hover">
-                <tr>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                </tr>
-                <tr>
-                  <td>222</td>
-                  <td>222</td>
-                  <td>222</td>
-                  <td>222</td>
-                  <td>222</td>
-                  <td>222</td>
-                </tr>
-                <tr>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                </tr>
-                <tr>
-                  <td>333</td>
-                  <td>333</td>
-                  <td>333</td>
-                  <td>333</td>
-                  <td>333</td>
-                  <td>333</td>
-                </tr>
-              </table>
-            </div>
-          </td>
-        </tr>
-
-        
-        <tr>
-          <td>
-            <button class="btn btn-default btn-xs">
-              <span class="glyphicon glyphicon-chevron-up"></span>
-            </button>
-          </td>
-          <td>111</td>
-          <td>111</td>
-          <td>111</td>
-          <td>111</td>
-          <td>111</td>
-        </tr>
-        <tr>
-          <td colspan="6">
-            <div class="well well sm">
-              <table class="table table-hover">
-                <tr>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                </tr>
-                <tr>
-                  <td>222</td>
-                  <td>222</td>
-                  <td>222</td>
-                  <td>222</td>
-                  <td>222</td>
-                  <td>222</td>
-                </tr>
-                <tr>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                  <th>#</th>
-                </tr>
-                <tr>
-                  <td>333</td>
-                  <td>333</td>
-                  <td>333</td>
-                  <td>333</td>
-                  <td>333</td>
-                  <td>333</td>
-                </tr>
-              </table>
-            </div>
-          </td>
-        </tr>
-      </table>
-      <ul class="pagination">
-        <li class="disabled"><a href="#">&laquo;</a>
-        </li>
-        <li class="active"><a href="#">1</a>
-        </li>
-        <li><a href="#">2</a>
-        </li>
-        <li><a href="#">3</a>
-        </li>
-        <li><a href="#">4</a>
-        </li>
-        <li><a href="#">5</a>
-        </li>
-        <li><a href="#">&raquo;</a>
-        </li>
-      </ul>
-    </div>
-    <!-- project panel end -->
-  </div>
-  <!-- container end -->
-
-
+  <ng-view></ng-view>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-resource.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.min.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
