--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-resource.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-sanitize.min.js"></script>
+  <script src="js/filters.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/app.js"></script>
 </body>
