--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-route.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular-sanitize.min.js"></script>
   <script src="js/filters.js"></script>
+  <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/app.js"></script>
 </body>
