--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,14 @@
   <script src="js/libs/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/libs/bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/libs/typeahead.min.js"></script>
   <script src="js/libs/angular.min.js"></script>
   <script src="js/libs/angular-resource.min.js"></script>
   <script src="js/libs/angular-route.min.js"></script>
   <script src="js/libs/angular-sanitize.min.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/directives.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/app.js"></script>
 </body>
